WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256757
REGRESSION(
262138@main
): [GStreamer] Broke video rendering when GL is disabled
https://bugs.webkit.org/show_bug.cgi?id=256757
Summary
REGRESSION(262138@main): [GStreamer] Broke video rendering when GL is disabled
Philippe Normand
Reported
2023-05-13 06:58:15 PDT
(gdb) bt #0 g_logv (log_domain=0x7f89a8b289ae "GStreamer", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=<optimized out>) at ../glib/gmessages.c:1418 #1 0x00007f89b0366933 in g_log (log_domain=<optimized out>, log_level=<optimized out>, format=<optimized out>) at ../glib/gmessages.c:1456 #2 0x00007f89b90a46e5 in gst_sample_unref(_GstSample*) (sample=0x7f8838049e90 [None]) at /usr/include/gstreamer-1.0/gst/gstsample.h:102 #3 0x00007f89b90a46c0 in WTF::derefGPtr<_GstSample>(_GstSample*) (ptr=0x7f8838049e90 [None]) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.cpp:310 #4 0x00007f89b90992ab in WTF::GRefPtr<_GstSample>::~GRefPtr() (this=0x7f88427fa2f8) at WTF/Headers/wtf/glib/GRefPtr.h:82 #5 0x00007f89b90f9083 in WTF::GRefPtr<_GstSample>::operator=(WTF::GRefPtr<_GstSample>&&) (this=0x7f899b124ae8, o=...) at WTF/Headers/wtf/glib/GRefPtr.h:153 #6 0x00007f89b90e6458 in WebCore::MediaPlayerPrivateGStreamer::triggerRepaint(WTF::GRefPtr<_GstSample>&&) (this=0x7f899b124a00, sample=...) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPri vateGStreamer.cpp:3700 #7 0x00007f89b90ea6b6 in WebCore::MediaPlayerPrivateGStreamer::createVideoSink()::$_26::operator()(WebCore::MediaPlayerPrivateGStreamer*, _GstSample*) const (this=0x7f899b124a00, player=0x7f899b124a00, sample=0x7 f882c0100c0 [GstSample]) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:4167 #8 0x00007f89b90ea66d in WebCore::MediaPlayerPrivateGStreamer::createVideoSink()::$_26::__invoke(WebCore::MediaPlayerPrivateGStreamer*, _GstSample*) (player=0x7f899b124a00, sample=0x7f882c0100c0 [GstSample]) at / app/webkit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:4167 #9 0x00007f89a66e8056 in ffi_call_unix64 () at ../src/x86/unix64.S:104 #10 0x00007f89a66e6add in ffi_call_int (cif=<optimized out>, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=<optimized out>) at ../src/x86/ffi64.c:673 #11 0x00007f89a66e72b3 in ffi_call (cif=cif@entry=0x7f88427fa710, fn=fn@entry=0x7f89b90ea650 <WebCore::MediaPlayerPrivateGStreamer::createVideoSink()::$_26::__invoke(WebCore::MediaPlayerPrivateGStreamer*, _GstSamp le*)>, rvalue=rvalue@entry=0x7f88427fa690, avalue=avalue@entry=0x7f88427fa650) at ../src/x86/ffi64.c:710 #12 0x00007f89b0457f6f in g_cclosure_marshal_generic (closure=<optimized out>, return_gvalue=<optimized out>, n_param_values=<optimized out>, param_values=<optimized out>, invocation_hint=<optimized out>, marshal_ data=<optimized out>) at ../gobject/gclosure.c:1534 #13 0x00007f89b0451d92 in g_closure_invoke (closure=0x19cd630, return_value=0x0, n_param_values=2, param_values=0x7f88427fa920, invocation_hint=0x7f88427fa8a0) at ../gobject/gclosure.c:830 #14 0x00007f89b0480768 in signal_emit_unlocked_R.isra.0 (node=node@entry=0x19cb180, detail=detail@entry=0, instance=instance@entry=0x19ca4b0, emission_return=emission_return@entry=0x0, instance_and_params=instance _and_params@entry=0x7f88427fa920) at ../gobject/gsignal.c:3777 #15 0x00007f89b0470316 in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7f88427faae0) at ../gobject/gsignal.c:3530 #16 0x00007f89b04705b3 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../gobject/gsignal.c:3587 #17 0x00007f89b913f6c7 in webkitVideoSinkRepaintRequested(_WebKitVideoSink*, _GstSample*) (sink=0x19ca4b0 [WebKitVideoSink], sample=0x7f882c0100c0 [GstSample]) at /app/webkit/Source/WebCore/platform/graphics/gstre amer/VideoSinkGStreamer.cpp:155 #18 0x00007f89b913f970 in VideoRenderRequestScheduler::requestRender(_WebKitVideoSink*, _GstBuffer*) (this=0x19ca0c0, sink=0x19ca4b0 [WebKitVideoSink], buffer=0x7f883400a6c0 [GstBuffer]) at /app/webkit/Source/WebC ore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:107 #19 0x00007f89b913f125 in webkitVideoSinkRender(_GstBaseSink*, _GstBuffer*) (baseSink=0x19ca4b0 [WebKitVideoSink], buffer=0x7f883400a6c0 [GstBuffer]) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/Video SinkGStreamer.cpp:179 .... Adopting the sample was a bad idea.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-13 07:06:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13855
EWS
Comment 2
2023-05-15 01:43:06 PDT
Committed
264064@main
(e4a2619c7a4c): <
https://commits.webkit.org/264064@main
> Reviewed commits have been landed. Closing PR #13855 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-15 01:44:18 PDT
<
rdar://problem/109343531
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug