Cherry-pick 264064@main (e4a2619c7a4c). https://bugs.webkit.org/show_bug.cgi?id=256757

REGRESSION(262138@main): [GStreamer] Broke video rendering when GL is disabled
    https://bugs.webkit.org/show_bug.cgi?id=256757

    Reviewed by Xabier Rodriguez-Calvar.

    The sample received from the Cairo sink is not transfer-full, so we shouldn't adopt its reference.
    Driving by, also allow passthrough of the WEBKIT_GST_DISABLE_GL_SINK environment variable in the
    test harness.

    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::createVideoSink):
    * Tools/Scripts/webkitpy/port/glib.py:
    (GLibPort.setup_environ_for_server):

    Canonical link: https://commits.webkit.org/264064@main

Canonical link: https://commits.webkit.org/260527.360@webkitglib/2.40